--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <h1> heading </h1>
 <div id ='jour'>monday</div><div id ='mois'>janvier</div>
-
+  <script>alert("eee")</script>
 <p> je suis ahmed</p>
 </body>
 </html>
