--- a/histoire.html
+++ b/histoire.html
@@ -70,7 +70,7 @@ An old man lived in the village. He was one of the most unfortunate people in th
 The longer he lived, the more bile he was becoming and the more poisonous were his words.</br></br> People avoided him, because his misfortune became contagious. It was even unnatural and insulting to be happy next to him.He created the feeling of </br></br>unhappiness in others.But one day, when he turned eighty years old, an incredible thing happened. Instantly everyone started hearing the rumour: </br><br>"An Old Man is happy today, he doesn't complain about anything, smiles, and even his face is freshened up."The whole village gathered together. </br></br>The old man was asked:Villager: What happened to you?"Nothing special. Eighty years I've been chasing happiness, and it was useless.</br></br> And then I decided to live without happiness and just enjoy life. That's why I'm happy now."</br></br>
 Moral of the story: <span id="aa" >Don't chase happiness. Enjoy your life.</span>
 </p>
-<img src="/home/ahmed/Images/old.jpg"></img>
+<img src="old.jpg"></img>
 <h3 id="show2">The Wise Man</h3>
 <p id ="p2">
 People have been coming to the wise man, complaining about the same problems every time. One day he told them a joke and everyone roared in laughter.<br><br>After a couple of minutes, he told them the same joke and only a few of them smiled.
