--- a/histoire.html
+++ b/histoire.html
@@ -354,7 +354,7 @@ All the hands still went up.
 وَما ضَرَّنا أَنّا قَليلٌ وَجارُنا - - عَزيزٌ وَجارُ الأَكثَرينَ ذَليلُ</br></br>
 
 السموأل
-<img src="per.jpg"></img>
+rr<img src="per.jpg"></img>
 
 </p>
 <p>
