--- a/histoire.html
+++ b/histoire.html
@@ -354,11 +354,11 @@ All the hands still went up.
 وَما ضَرَّنا أَنّا قَليلٌ وَجارُنا - - عَزيزٌ وَجارُ الأَكثَرينَ ذَليلُ</br></br>
 
 السموأل
-rr<img src="per.jpg"></img>
+rr
 <img src="old.jpg"></img>
 </p>
 <p>
-
+<img src="per.jpg"></img>
 </p>
  </body>
 </html>
